/*
 * University of Illinois Open Source License
 * Copyright 2012-2014 Roberts Group,
 * All rights reserved.
 *
 * Developed by: Roberts Group
 * 			     Johns Hopkins University
 * 			     http://biophysics.jhu.edu/roberts/
 *
 * Permission is hereby granted, free of charge, to any person obtaining a copy of
 * this software and associated documentation files (the Software), to deal with
 * the Software without restriction, including without limitation the rights to
 * use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies
 * of the Software, and to permit persons to whom the Software is furnished to
 * do so, subject to the following conditions:
 *
 * - Redistributions of source code must retain the above copyright notice,
 * this list of conditions and the following disclaimers.
 *
 * - Redistributions in binary form must reproduce the above copyright notice,
 * this list of conditions and the following disclaimers in the documentation
 * and/or other materials provided with the distribution.
 *
 * - Neither the names of the Roberts Group, Johns Hopkins University,
 * nor the names of its contributors may be used to endorse or
 * promote products derived from this Software without specific prior written
 * permission.
 *
 * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
 * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
 * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT.  IN NO EVENT SHALL
 * THE CONTRIBUTORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR
 * OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE,
 * ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR
 * OTHER DEALINGS WITH THE SOFTWARE.
 *
 * Author(s): Elijah Roberts, Max Klein
 */

package lm.io;

message TrajectoryLimits {
    enum LimitType {MAXTIME=1; MINSPECIESCOUNT=10; MAXSPECIESCOUNT=11; DECREASINGORDERPARAMETER=20; INCREASINGORDERPARAMETER=21;}
    enum Arrangement {ASCENDING=1;DESCENDING=2;}
    optional double max_time                            = 1;
    repeated int32 min_species_count                    = 2 [packed=true];
    repeated int32 max_species_count                    = 3 [packed=true];

    message DecreasingOrderParameterLimit {
        optional Arrangement arrangement                = 1 [default=ASCENDING];
        required uint32 order_parameter_id              = 2;
        repeated double value                           = 3 [packed=true];
    }

    message IncreasingOrderParameterLimit {
        optional Arrangement arrangement                = 1 [default=ASCENDING];
        required uint32 order_parameter_id              = 2;
        repeated double value                           = 3 [packed=true];
    }

    repeated DecreasingOrderParameterLimit decreasing_order_parameter_limit     = 4;
    repeated IncreasingOrderParameterLimit increasing_order_parameter_limit     = 5;
}
